@@ -8582,7 +8582,7 @@
 	      <child>
 		<widget class="GtkLabel" id="label595">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">_Title:</property>
+		  <property name="label" translatable="yes">Tit_le:</property>
 		  <property name="use_underline">True</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_CENTER</property>
@@ -8801,7 +8801,7 @@
 	      <child>
 		<widget class="GtkLabel" id="label654">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">_Call Name:</property>
+		  <property name="label" translatable="yes">Call _Name:</property>
 		  <property name="use_underline">True</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -9120,7 +9120,7 @@
 			<widget class="GtkCheckButton" id="group_over">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Override</property>
+			  <property name="label" translatable="yes">O_verride</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
